--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,14 @@ mypy = "^0.982"
 [tool.poetry.dev-dependencies]
 pyinstaller = "^5.4.1"
 black = "^22.8.0"
+taskipy = "^1.10.3"
+pylint = "^2.15.3"
+flake8 = "^5.0.4"
+
+[tool.taskipy.tasks]
+format = "Black ."
+lint = "pylint src"
+flake = "flake8 src"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
